[package]
name = "keykapp"
version = "0.1.0"
authors = ["Helder S Ribeiro <git@agentofuser.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { path="../rdev", features=["unstable_grab", "serialize"] }
commitlog = "0.1"
serde = "1.0.126"
serde_cbor = "0.11"
priority-queue = { version="1.1.1", features=["serde"] }
